@@ -1,5 +1,7 @@
 pgcenter (devel) unstable; urgency=low
 
+  * move the sources into src/ dir.
+  * add -Wextra, -Wfloat-equal into Makefile and fix collateral warnings.
   * refactoring internal color management.
   * add new bufsize macros, increase line bufsize in read_diskstats().
   * add PVS-Studio comments, fix issues generated by PVS.
